ice cream page init

--- a/src/app/component/icecream/icecream.component.html
+++ b/src/app/component/icecream/icecream.component.html
@@ -1,5 +1,71 @@
 <div class="main_div">
-  <div> </div>
-  <div> </div>
-  <div> </div>
+  <div>
+    <div class="shortcut"><div class="fixedbg" style="background: rgb(255, 255, 255); height: 1137px;"></div>
+      <div class="openrest_ordershortcutview_wrapper" role="navigation">
+        <a class="ClientInfoButton__wrapper___1WHW6 ClientInfoButton__themeSidebar___3vn9A ClientInfoButton__guest___Izagq" aria-label="Your details" href="#"><div class="ClientInfoButton__flexButtonContent___2NIvg"><div class="ClientInfoButton__avatarWrapper___ny1WE"><svg class="svg_missing_avatar " preserveAspectRatio="xMidYMid" viewBox="0 0 66 66" width="32px" height="32px" style="border-radius: 100%;"><g><circle cx="50%" cy="50%" r="49%" stroke="rgba(104,57,26,1)" stroke-width="2" fill="none"></circle><path fill="rgba(104,57,26,1)" class="foreground" d="M33.000 66 C15.982 66 9 55 9 55 C9.000 55 18.7 43 33 43 C47.257 43 57 55 57 55 C57.000 55 50 66 33 66 ZM33.000 41 C26.373 41 21 35.6 21 29 C21.000 22.4 26.4 17 33 17 C39.627 17 45 22.4 45 29 C45.000 35.6 39.6 41 33 41 Z" style="fill-rule: evenodd;"></path></g></svg></div><div class="ClientInfoButton__username___3SOEa">Hi, Guest</div></div></a>
+        <ul class="unstyledList">
+          <span>
+          <li class="parentsection">
+            <a href="javascript:void(0)" class="parentsection-titlearrow" (click)="showList()">
+              <div class="parentsection-title-text">Our Ice Cream</div>
+              <div  class="parentsection-icon" [ngClass]="listShow?'expand':''">
+                <svg width="6px" height="14px" fill="rgba(104, 57, 26, 1)" viewBox="0 0 12 22"><path fill-rule="evenodd" d="M 11.43 3.31C 11.43 3.31 4.28 10.97 4.28 10.97 4.28 10.97 11.48 18.68 11.48 18.68 12.19 19.44 12.19 20.67 11.48 21.43 10.78 22.18 9.63 22.18 8.92 21.43 8.92 21.43 0.59 12.51 0.59 12.51 0.07 11.96-0.06 11.17 0.16 10.49 0.22 10.09 0.38 9.72 0.66 9.41 0.66 9.41 8.9 0.6 8.9 0.6 9.6-0.15 10.73-0.15 11.43 0.6 12.13 1.35 12.13 2.56 11.43 3.31Z"></path>
+                </svg>
+              </div>
+              <!--<div class="parentsection-icon expand">-->
+                <!--<svg width="6px" height="14px" fill="rgba(104, 57, 26, 1)" viewBox="0 0 12 22"><path fill-rule="evenodd" d="M 11.43 3.31C 11.43 3.31 4.28 10.97 4.28 10.97 4.28 10.97 11.48 18.68 11.48 18.68 12.19 19.44 12.19 20.67 11.48 21.43 10.78 22.18 9.63 22.18 8.92 21.43 8.92 21.43 0.59 12.51 0.59 12.51 0.07 11.96-0.06 11.17 0.16 10.49 0.22 10.09 0.38 9.72 0.66 9.41 0.66 9.41 8.9 0.6 8.9 0.6 9.6-0.15 10.73-0.15 11.43 0.6 12.13 1.35 12.13 2.56 11.43 3.31Z"></path></svg></div>-->
+            </a><!-- react-empty: 554 -->
+          <div *ngIf="listShow" style="height: auto;">
+            <div><ul class="unstyledList">
+              <li><a href="javascript:void(0)" class="childsection selected">FLAVORS</a></li></ul></div></div>
+          </li></span></ul></div></div>
+  </div>
+  <div class="menu"><div class="parentsection">
+    <h1 class="sectiontitle" style="color: rgb(104, 57, 26); font: 28px/1.4em museo-slab-w01-100, serif;">Our Cupcakes</h1><p class="sectiondescription" style="color: rgb(104, 57, 26); font: 15px/1.4em proxima-n-w01-reg, sans-serif;"></p></div><div class="openrest_restaurantmenutableview_wrapper"><div class="RestaurantMenuTableViewOrder__wrapper___1Rglt">
+    <div class="RestaurantMenuTableViewOrder__category___3_spj"><div>
+      <div class="RestaurantMenuTableViewOrder__subcategory___3n9VA" data-id="-11">
+        <h2 class="RestaurantMenuTableViewOrder__subcategorytitle___toMTO"><div>FLAVORS</div></h2>
+        <span></span>
+        <div class="RestaurantMenuTableViewOrder__subcategorydescription___1dWuz"><div>This is a section of your menu. Give your section a brief description</div></div>
+        <ul class="RestaurantMenuTableViewOrder__subcategorychildren___3uhtl">
+          <li class="RestaurantMenuTableViewOrder__item___K8aMy">
+            <a href="#" class="RestaurantMenuTableViewOrder__itemLink___2ptNI">
+              <div class="RestaurantMenuTableViewOrder__itemimage___1dOFm"
+                  >
+                <img src="assets/img/icecream/1.webp"/>
+              </div>
+              <div class="RestaurantMenuTableViewOrder__addbutton___15GMI">
+                <i class="wixrest-icon wixrest-plus"></i>
+              </div><!-- react-empty: 70 -->
+              <div class="RestaurantMenuTableViewOrder__itemtitledescriptionwrapper___1P7n9">
+                <div class="RestaurantMenuTableViewOrder__itemtitledescription___1vAH1">
+                  <div class="RestaurantMenuTableViewOrder__itemtitle___2M5y5">CLASSIC RED VELVET</div>
+                  <div class="RestaurantMenuTableViewOrder__price___2mare ">$9</div>
+                </div>
+
+                <div class="RestaurantMenuTableViewOrder__addbutton___15GMI">+</div>
+              </div>
+            </a>
+          </li>
+          <li class="RestaurantMenuTableViewOrder__item___K8aMy">
+            <a href="#" class="RestaurantMenuTableViewOrder__itemLink___2ptNI">
+              <div class="RestaurantMenuTableViewOrder__itemimage___1dOFm"
+              >
+                <img src="assets/img/icecream/1.webp"/>
+              </div>
+              <div class="RestaurantMenuTableViewOrder__addbutton___15GMI">
+                <i class="wixrest-icon wixrest-plus"></i>
+              </div><!-- react-empty: 70 -->
+              <div class="RestaurantMenuTableViewOrder__itemtitledescriptionwrapper___1P7n9">
+                <div class="RestaurantMenuTableViewOrder__itemtitledescription___1vAH1">
+                  <div class="RestaurantMenuTableViewOrder__itemtitle___2M5y5">CLASSIC RED VELVET</div>
+                  <div class="RestaurantMenuTableViewOrder__price___2mare ">$9</div></div>
+
+              </div>
+            </a>
+          </li>
+          </ul></div></div></div></div></div></div>
+
+    <div aria-hidden="false" class="cart"><div class="fixedbg"></div><div class="fixedbgborder"></div><div class="openrest_cartview_wrapper"><section class="cart_section" aria-labelledby="cart_title cart_numitems"><div class="_3pi3SclL6Xt7gqinDQ6SFg"><h2 class="title" id="cart_title"><button class="ltr _1e8JqrCPrJZvWjIT2K4HJW" aria-label="Back to Menu"><svg width="7px" height="12px" viewBox="0 0 9 15"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><polygon points="0.265196555 13.3217199 1.73480344 14.6782801 8.36090815 7.5 1.73480344 0.321719897 0.265196555 1.6782801 5.63909185 7.5"></polygon></g></g></svg></button><!-- react-text: 209 -->My Order<!-- /react-text --></h2><span class="numitems" id="cart_numitems">(0 items)</span></div></section><div class="openrest_web_CartView_ItemsArea_wrapper"><div class="items_container"><div class="empty_cart"><svg class="svg_empty_cart " width="53px" height="60px" viewBox="0 0 53 60"><g><path d="M47.5,15.6 C47.5,13.5 45.8,11.9 43.7,11.9 L35.5,11.9 C35.4,8.9 34.8,5.5 32.9,3.1 C31.2,1.1 28.9,-2.22044605e-15 25.9,-2.22044605e-15 C23.4,-2.22044605e-15 21.3,1 19.8,2.8 C17.7,5.2 16.9,8.9 16.7,11.9 L8.9,11.9 C6.8,11.9 5.1,13.5 5.1,15.6 L0,56.1 C0,58.2 1.7,59.9 3.8,59.9 L26.9,59.9 L48.8,59.9 C50.9,59.9 52.6,58.2 52.6,56.1 L47.5,15.6 L47.5,15.6 Z M21.2,4 C22.4,2.7 23.9,2 25.8,2 C28.2,2 30,2.9 31.3,4.4 C32.9,6.4 33.4,8.8 33.5,11.8 L18.6,11.8 C18.8,8.9 19.5,6 21.2,4 L21.2,4 Z M48.8,57.9 L26.9,57.9 L3.8,57.9 C2.8,57.9 2.1,57.1 2,56.2 L7.2,15.8 L7.3,15.7 L7.3,15.6 C7.3,14.6 7.9,14 8.9,14 L16.5,14 C16.5,16 16.7,17.3 16.7,17.4 C16.8,17.9 17.2,18.2 17.7,18.2 L17.8,18.2 C18.3,18.1 18.7,17.8 18.7,17.2 C18.7,17.2 18.5,16 18.6,14 L33.6,14 C33.5,16 33.3,17.1 33.3,17.1 C33.2,17.6 33.5,18.1 34.1,18.2 C34.6,18.3 35.2,18.1 35.3,17.5 C35.3,17.4 35.6,16 35.7,14 L43.9,14 C44.9,14 45.5,14.5 45.5,15.6 L45.5,15.7 L45.6,15.8 L50.7,56.2 C50.5,57.1 49.8,57.9 48.8,57.9 L48.8,57.9 Z"></path></g></svg><div class="text">Browse our menu and start adding items to your order</div></div></div></div><div class="itemsarea_bottomborder"></div><div class="summary"><div class="subtotal line"><div class="title">Subtotal</div><div class="min"></div><div class="amount">$0</div><div style="clear: both;"></div></div><!-- react-text: 238 --><!-- /react-text --><!-- react-text: 239 --><!-- /react-text --><!-- react-text: 240 --><!-- /react-text --></div><div class="comment_box collapsed"><a href="#" class="Button__wrapper___3iiEa Button__btn-link___SwwD2"><div class="Button__childrenWrapper___13UH2"><span class="Button__iconWrapper___3PZwi"><svg width="10" height="10"><line x1="0" y1="5" x2="10" y2="5" style="stroke: currentcolor; stroke-width: 2;"></line><line x1="5" y1="0" x2="5" y2="10" style="stroke: currentcolor; stroke-width: 2;"></line></svg></span><!-- react-text: 248 -->Special requests<!-- /react-text --></div><div class="Button__spinnerWrapper___1ULiz"><span class="Spinner__wrapper___2UQOO " style="border-color: transparent; width: 20px; height: 20px;"><svg class="Spinner__spinner___3FUcU" viewBox="0 0 44 44" style="width: 20px; height: 20px; border-radius: 50%; position: absolute; top: -4px; left: -4px;"><circle class="Spinner__path___9XMx-" cx="22" cy="22" r="20" fill="none" style="stroke: rgb(255, 255, 255);"></circle></svg></span></div></a></div><div class="comment_bottom_border"></div><div class="openrest_CartView_DeliveryPickupSelection_wrapper"><div id="onlytakeoutdelivery" class="onlytakeoutdelivery">Online ordering unavailable</div></div><div style="clear: both;"></div><div class="buttonwrapper" style="padding: 4px 18px 18px 19px;"><div class="orderNowButtonTooltip"><div class="wixRestToolTipContainer right dontshow  "><a class="openrest_checkoutcontinuebutton_wrapper ordernowbutton" href="#" aria-describedby="onlytakeoutdelivery checkout-continue-button-tooltip"><div class="buttonSpinner"><span class="Spinner__wrapper___2UQOO " style="width: 30px; height: 30px;"><svg class="Spinner__spinner___3FUcU" viewBox="0 0 44 44" style="width: 30px; height: 30px; border-radius: 50%; position: absolute; top: -4px; left: -4px;"><circle class="Spinner__path___9XMx-" cx="22" cy="22" r="20" fill="none" style="stroke: white;"></circle></svg></span></div><div class="buttonLabel"><!-- react-text: 518 -->Order Now<!-- /react-text --><svg width="5px" height="7px" viewBox="0 0 5 7" class="flip"><path fill-rule="evenodd" d="M 3 4C 3 4 3 5 3 5 3 5 4 5 4 5 4 5 4 6 4 6 4 6 5 6 5 6 5 6 5 7 5 7 5 7 3 7 3 7 3 7 3 6 3 6 3 6 2 6 2 6 2 6 2 5 2 5 2 5 1 5 1 5 1 5 1 4 1 4 1 4 0 4 0 4 0 4 0 3 0 3 0 3 1 3 1 3 1 3 1 2 1 2 1 2 2 2 2 2 2 2 2 1 2 1 2 1 3 1 3 1 3 1 3 0 3 0 3 0 5 0 5 0 5 0 5 1 5 1 5 1 4 1 4 1 4 1 4 2 4 2 4 2 3 2 3 2 3 2 3 3 3 3 3 3 2 3 2 3 2 3 2 4 2 4 2 4 3 4 3 4Z"></path></svg></div></a><div class="wixRestToolTip  dontshow" role="alert" style="width: 209px; max-width: 209px; left: -235.722px; bottom: -4.5px;"><span><span></span><div><div style="text-align: center;">Cart is empty. Add items to kick off your order.</div></div><span style="display: none;"></span></span><i class="arrow  right " style="top: 20.2218px;"></i></div></div></div></div></div></div>
+
 </div>
