--- a/src/app/component/icecream/icecream.component.css
+++ b/src/app/component/icecream/icecream.component.css
@@ -1,8 +1,315 @@
 .main_div{    min-height: 1136px;
     min-width: 980px;
     left: 0px;
-    width: 980px;
+    width: 1000px;
     position: relative;
     height: 1136px;
-    margin: 50px auto
+    margin: 50px auto;
+    background-color: #fff;
 }
+.main_div a{
+    text-decoration: none;
+}
+.ClientInfoButton__wrapper___1WHW6 {
+    display: block;
+    position: relative;
+    font: normal normal normal 15px/1.4em proxima-n-w01-reg,sans-serif;
+    font-size: 1em;
+    color: rgba(104,57,26,1);
+    text-align: left;
+    cursor: pointer;
+    transition: max-height 1s ease-out;
+    overflow: hidden;
+    max-height: 100px;
+    padding: 8px;
+    background: none;
+    border: none;
+    width: calc(100% - 1px);
+    border-bottom: 1px solid #000;
+    border-bottom-color: rgba(104, 57, 26, 0.30000000000000004);
+}
+.shortcut>.fixedbg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    border-right: 1px solid;
+    border-right-color: rgba(104, 57, 26, 0.30000000000000004);
+    height: 100%;
+}
+.shortcut>.fixedbg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    border-right: 1px solid;
+    border-right-color: rgba(104, 57, 26, 0.30000000000000004);
+    height: 100%;
+}
+.ClientInfoButton__flexButtonContent___2NIvg {
+    display: flex;
+    align-items: center;
+}
+.ClientInfoButton__avatarWrapper___ny1WE {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 34px;
+    width: 34px;
+    margin-left: 3px;
+    margin-right: 12px;
+}
+.shortcut {
+    position: relative;
+    min-height: 1px;
+    float: left;
+    opacity: 1;
+    width: 160px;
+}
+.openrest_ordershortcutview_wrapper{
+    overflow: hidden;
+}
+.openrest_ordershortcutview_wrapper .unstyledList {
+    list-style: none;
+    padding: 0;
+}
+.openrest_ordershortcutview_wrapper .parentsection {
+    display: block;
+}
+.openrest_ordershortcutview_wrapper .parentsection .parentsection-titlearrow {
+    color: rgba(104,57,26,1);
+    font: normal normal 500 14px/21px proxima-n-w01-reg,sans-serif;
+    position: relative;
+    width: calc(100% - 1px);
+    padding-bottom: 13px;
+    padding-top: 13px;
+    border-bottom: 1px solid;
+    border-bottom-color: rgba(104, 57, 26, 0.30000000000000004);
+    min-height: 42px;
+    cursor: pointer;
+    display: flex;
+}
+.openrest_ordershortcutview_wrapper .parentsection .parentsection-titlearrow .parentsection-title-text {
+    flex: 1;
+    padding-left: 11px;
+    padding-top: 9px;
+    color: rgba(104,57,26,1);
+    font: normal normal 500 14px/21px proxima-n-w01-reg,sans-serif;
+    max: calc(100% - 30px);
+    max-width: ~ 70%;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+.openrest_ordershortcutview_wrapper .parentsection .parentsection-titlearrow .parentsection-icon.expand>svg {
+    transform: rotate(90deg);
+}
+.openrest_ordershortcutview_wrapper .unstyledList {
+    list-style: none;
+    padding: 0;
+}
+.openrest_ordershortcutview_wrapper .childsection.selected {
+    color: rgb(104, 57, 26);
+    font: normal normal normal 14px/21px proxima-n-w01-reg,sans-serif;
+    /*border-left:3px solid rgb(104, 57, 26);*/
+}
+.openrest_ordershortcutview_wrapper .childsection {
+    display: block;
+    color: rgb(104, 57, 26);
+    font: normal normal normal 14px/21px proxima-n-w01-reg,sans-serif;
+    cursor: pointer;
+    padding-left: 19px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    width: calc(100% - 1px);
+    padding-right: 30px;
+    position: relative;
+}
+.openrest_ordershortcutview_wrapper .childsection.selected:before {
+    content: " ";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background: rgb(104, 57, 26);
+    z-index: 10000000;
+}
+.openrest_ordershortcutview_wrapper .parentsection .parentsection-titlearrow .parentsection-icon {
+    flex-basis: 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.openrest_ordershortcutview_wrapper .parentsection .parentsection-titlearrow .parentsection-icon>svg {
+    transform: rotate(-90deg);
+    transition: .3s ease-in-out;
+}
+.menu {
+    float: left;
+    opacity: 1;
+    width: 575px;
+    min-height: 1px;
+    border-left: 1px solid;
+    border-left-color: rgba(104, 57, 26, 0.30000000000000004);
+    border-right: 1px solid;
+    border-right-color: rgba(104, 57, 26, 0.30000000000000004);
+}
+.menu .parentsection {
+    position: relative;
+    margin: 0 30px;
+    padding-top: 29px;
+    text-align: center;
+    margin-bottom: 13px;
+}
+.RestaurantMenuTableViewOrder__addbutton___15GMI {
+    color: rgb(104, 57, 26);
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    right: 20px;
+    text-align: center;
+    bottom: 22px;
+    font-size: 20px;
+    z-index: 5;
+}
+@media only screen and (max-width: 1024px) {
+     .menu .parentsection {
+        margin-left: calc((100% - 500px) / 3);
+        margin-right: calc((100% - 500px) / 3);
+    }
+}
+.menu .parentsection .sectiontitle {
+    font: normal normal normal 28px/1.4em museo-slab-w01-100,serif;
+    font-weight: 700;
+    padding-bottom: 4px;
+    max-width: 648px;
+    margin: auto;
+}
+.menu .parentsection .sectiondescription:empty {
+    padding-bottom: 11px;
+}
+.menu .parentsection .sectiondescription:after {
+    content: " ";
+    position: absolute;
+    left: 25%;
+    right: 25%;
+    bottom: 0;
+    border-bottom: 1px solid;
+    border-bottom-color: rgba(104, 57, 26, 0.30000000000000004);
+}
+.RestaurantMenuTableViewOrder__category___3_spj {
+    clear: both;
+    text-align: left;
+}
+.RestaurantMenuTableViewOrder__subcategorychildren___3uhtl {
+    text-align: left;
+    list-style: none;
+    padding: 0;
+}
+.RestaurantMenuTableViewOrder__item___K8aMy {
+    display: block;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    text-align: START;
+    box-shadow: 0 1px 2px rgba(0,0,0,.3);
+    margin-bottom: 25px;
+    background-color: #fff;
+    transition: all .3s cubic-bezier(.645,.045,.355,1);
+}
+.openrest_web_CartView_ItemsArea_wrapper {
+    min-height: 203px;
+    max-height: 280px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    cursor: default;
+}
+.menu ul{
+    width: 575px;
+    margin: 0 auto;
+}
+.menu ul li{
+    width: 245px;
+    margin: 10px 20px;
+}
+.RestaurantMenuTableViewOrder__itemtitle___2M5y5 {
+    color: rgb(104, 57, 26);
+    font: normal normal normal 16px/21px proxima-n-w01-reg,sans-serif;
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.2em!important;
+}
+.RestaurantMenuTableViewOrder__itemtitledescription___1vAH1>.RestaurantMenuTableViewOrder__price___2mare {
+    color: rgb(104, 57, 26);
+    font: normal normal normal 14px/21px HelveticaNeueW01-45Ligh;
+    display: block;
+}
+
+.RestaurantMenuTableViewOrder__innercard___2JghU {
+    position: absolute;
+    padding-left: 13px;
+    padding-right: 40px;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 300px;
+    z-index: 2;
+    background-color: rgb(255, 255, 255);
+    padding-top: 15px;
+}
+.RestaurantMenuTableViewOrder__itemtitledescriptionwrapper___1P7n9 {
+    transition: all .3s cubic-bezier(.645,.045,.355,1);
+    position: relative;
+    top: 0;
+    height: 96px;
+    display: block;
+    padding-left: 13px;
+    padding-right: 40px;
+    background-color: rgb(255, 255, 255);
+    padding-top: 15px;
+}
+.RestaurantMenuTableViewOrder__subcategorytitle___toMTO div {
+    font: normal normal normal 28px/1.4em museo-slab-w01-100,serif;
+    color: rgb(104, 57, 26);
+    font-size: 28px!important;
+    max-width: 648px;
+    margin: auto;
+    text-align: center;
+}
+.RestaurantMenuTableViewOrder__subcategorydescription___1dWuz div {
+    color: rgb(104, 57, 26);
+    font: normal normal normal 14px/18px proxima-n-w01-reg,sans-serif;
+    max-width: 648px;
+    margin: auto;
+}
+.RestaurantMenuTableViewOrder__subcategorydescription___1dWuz {
+    text-align: center;
+    padding-bottom: 24px;
+}
+.RestaurantMenuTableViewOrder__subcategorydescription___1dWuz div {
+    color: rgb(104, 57, 26);
+    font: normal normal normal 14px/18px proxima-n-w01-reg,sans-serif;
+    max-width: 648px;
+    margin: auto;
+}
+.cart {
+
+    height: 100%;
+    width: 245px;
+    float: left;
+    opacity: 1;
+
+    min-height: 1px;
+}
+@media only screen and (max-width: 1024px)
+          .openrest_wixrestaurantordersapplicationview_wrapper:not(.restaurants-portal) .RestaurantMenuTableViewOrder__subcategory___3n9VA .RestaurantMenuTableViewOrder__item___K8aMy:nth-child(odd) {
+              margin-right: calc((100% - 490px)/3);
+              margin-bottom: calc((100% - 490px)/3);
+              margin-left: calc((100% - 490px)/3);
+          }
