about us init && shopping cart

--- a/src/app/component/aboutus/aboutus.component.html
+++ b/src/app/component/aboutus/aboutus.component.html
@@ -1,3 +1,24 @@
-<p>
-  aboutus works!
-</p>
+
+<div class="about_div">
+
+  <div style="width:45%;display: inline-block;">
+  <img src="assets/img/home.jpg" style="width: 100%;height:auto;"/>
+  </div>
+  <div style="width:51%;display: inline-block;text-align: center;">
+    <h2>Contact US</h2>
+    <div>11 Labakan Pl, Highland Park, NJ 08904</div>
+    <p>We want to hear from you, write us:</p>
+    <form action="https://formspree.io/xiawucha0908@gmail.com" method="POST">
+      <input type="hidden" name="_format" value="plain" />
+    <input class="input_contact" type="text" placeholder="name" name="name"/>
+    <input class="input_contact" type="email" name="email" placeholder="Email">
+    <input class="input_contact" type="text" placeholder="Subject" name="subject">
+      <input type="hidden" name="_replyto" value="zhuoyuezhou@gmail.com">
+    <textarea rows="3" name="message" ></textarea>
+    <input type="submit" class="btn btn-primary" value="send" />
+    </form>
+  </div>
+  <div>
+
+  </div>
+</div>
