--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -58,17 +58,17 @@
         </div>
       </a>
     </li>
-    <li class="ddm2repeaterButton" data-state="menu selected idle link notMobile" data-original-gap-between-text-and-btn="7" aria-hidden="false" style="width: 159px; height: 45px; position: relative; box-sizing: border-box; overflow: visible;">
-      <a role="button" tabindex="0" aria-haspopup="false" data-listposition="left" routerLink="/dessert" target="_self" id="DrpDwnMn03linkElement" class="ddm2repeaterButtonlinkElement">
-        <div class="ddm2repeaterButton_wrapper">
-          <div class="ddm2repeaterButtonborderWrapper">
-            <div style="text-align:center" class="ddm2repeaterButtonbg">
-              <p style="text-align: center; line-height: 39px;" class="ddm2repeaterButtonlabel">Dessert</p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
+    <!--<li class="ddm2repeaterButton" data-state="menu selected idle link notMobile" data-original-gap-between-text-and-btn="7" aria-hidden="false" style="width: 159px; height: 45px; position: relative; box-sizing: border-box; overflow: visible;">-->
+      <!--<a role="button" tabindex="0" aria-haspopup="false" data-listposition="left" routerLink="/dessert" target="_self" id="DrpDwnMn03linkElement" class="ddm2repeaterButtonlinkElement">-->
+        <!--<div class="ddm2repeaterButton_wrapper">-->
+          <!--<div class="ddm2repeaterButtonborderWrapper">-->
+            <!--<div style="text-align:center" class="ddm2repeaterButtonbg">-->
+              <!--<p style="text-align: center; line-height: 39px;" class="ddm2repeaterButtonlabel">Dessert</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</a>-->
+    <!--</li>-->
     <li class="ddm2repeaterButton" data-state="menu selected idle link notMobile" data-original-gap-between-text-and-btn="7" aria-hidden="false" style="width: 159px; height: 45px; position: relative; box-sizing: border-box; overflow: visible;">
       <a role="button" tabindex="0" aria-haspopup="false" data-listposition="left" routerLink="/aboutus" target="_self" class="ddm2repeaterButtonlinkElement">
         <div class="ddm2repeaterButton_wrapper">
