--- a/src/app/component/icecream/icecream.component.css
+++ b/src/app/component/icecream/icecream.component.css
@@ -174,6 +174,7 @@
     bottom: 22px;
     font-size: 20px;
     z-index: 5;
+    cursor: pointer;
 }
 @media only screen and (max-width: 1024px) {
      .menu .parentsection {
@@ -423,9 +424,132 @@
     color: rgb(255, 255, 255);
     font: normal normal bold 14px/18px proxima-n-w01-reg,sans-serif;
 }
-@media only screen and (max-width: 1024px)
-          .openrest_wixrestaurantordersapplicationview_wrapper:not(.restaurants-portal) .RestaurantMenuTableViewOrder__subcategory___3n9VA .RestaurantMenuTableViewOrder__item___K8aMy:nth-child(odd) {
-              margin-right: calc((100% - 490px)/3);
-              margin-bottom: calc((100% - 490px)/3);
-              margin-left: calc((100% - 490px)/3);
-          }
+.items_container>.item>.col1 {
+    width: calc(100% - 55px);
+    float: left;
+    transition: .15s cubic-bezier(.55,.055,.675,.19);
+    white-space: nowrap;
+    display: flex;
+}
+.items_container>.item>.col2 {
+    transition: .15s cubic-bezier(.55,.055,.675,.19);
+    float: right;
+}
+.items_container>.item .options {
+    height: auto;
+    margin-right: 20px;
+}
+.openrest_web_CartView_ItemsArea_wrapper>.items_container>.item>.hovertoolbox {
+    position: absolute;
+    top: 0;
+    right: -28px;
+    padding: 0 6px;
+    width: 30px;
+    height: 100%;
+    transition: .15s cubic-bezier(.55,.055,.675,.19);
+    background-color: transparent;
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.items_container>.item.item_focused {
+    background-color: rgba(104, 57, 26, 0.07000000000000006);
+    margin-left: 1px;
+    padding-left: 17px;
+}
+
+.items_container>.item.item_focused>.col1 {
+    width: calc(100% - 90px);
+    transition: .15s cubic-bezier(.215,.61,.355,1);
+}
+.items_container>.item.item_focused>.col2 {
+    padding-right: 30px;
+    transition: .15s cubic-bezier(.215,.61,.355,1);
+}
+.items_container>.item.item_focused>.hovertoolbox {
+    top: 0;
+    right: 12px;
+    transition: .15s cubic-bezier(.215,.61,.355,1);
+}
+
+.items_container>.item>.hovertoolbox>.button_delete>svg {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    transform: scale(1);
+}
+
+.items_container>.item>.hovertoolbox>.button_duplicate {
+    background: rgba(104, 57, 26, 0);
+}
+.items_container>.item {
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    padding: 18px 17px;
+    margin-left: 1px;
+    cursor: pointer;
+    border: 0;
+    text-align: left;
+    display: block;
+}
+.items_container>.item>.col1>.title {
+    font: normal normal normal 14px/1.4em proxima-n-w01-reg,sans-serif;
+    color: rgb(104, 57, 26);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 20px;
+    white-space: nowrap;
+}
+.items_container>.item>.hovertoolbox {
+    position: absolute;
+    top: 0;
+    right: -37px;
+    padding: 0 6px;
+    width: 30px;
+    height: 100%;
+    transition: .15s cubic-bezier(.55,.055,.675,.19);
+    background-color: transparent;
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.items_container>.item>.hovertoolbox>.button_duplicate>svg {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+.items_container>.item>.hovertoolbox>.button_delete>svg {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    transform: scale(1);
+}
+.items_container>.item.item_focused>.hovertoolbox {
+    top: 0;
+    right: 1px!important;
+    transition: .15s cubic-bezier(.215,.61,.355,1)!important;
+}
+.items_container>.item>.hovertoolbox>.button_duplicate line, .items_container>.item>.hovertoolbox>.button_duplicate path {
+    color: rgba(104, 57, 26, 1);
+}
+.items_container>.item>.hovertoolbox>.button_delete line, .items_container>.item>.hovertoolbox>.button_delete path {
+    stroke: rgba(104, 57, 26, 1);
+}
+.items_container>.item>.hovertoolbox>.button {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: block;
+    margin-bottom: 4px;
+    border: 0;
+}
+@media only screen and (max-width: 1024px) {
+    .openrest_wixrestaurantordersapplicationview_wrapper:not(.restaurants-portal) .RestaurantMenuTableViewOrder__subcategory___3n9VA .RestaurantMenuTableViewOrder__item___K8aMy:nth-child(odd) {
+        margin-right: calc((100% - 490px) / 3);
+        margin-bottom: calc((100% - 490px) / 3);
+        margin-left: calc((100% - 490px) / 3);
+    }
+}
