--- a/src/app/component/icecream/icecream.component.html
+++ b/src/app/component/icecream/icecream.component.html
@@ -76,13 +76,36 @@
               <!--<svg width="7px" height="12px" viewBox="0 0 9 15"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><polygon points="0.265196555 13.3217199 1.73480344 14.6782801 8.36090815 7.5 1.73480344 0.321719897 0.265196555 1.6782801 5.63909185 7.5"></polygon></g></g></svg>-->
             <!--</button>-->
             My Order</h2>
-            <span class="numitems" id="cart_numitems">(0 items)</span>
+            <span class="numitems" id="cart_numitems">({{shoppingCart.length}} items)</span>
           </div>
         </section>
         <div class="openrest_web_CartView_ItemsArea_wrapper">
         <div class="items_container">
-          <div class="empty_cart">
+          <div class="empty_cart" *ngIf="shoppingCart.length==0">
             <svg class="svg_empty_cart " width="53px" height="60px" viewBox="0 0 53 60"><g><path d="M47.5,15.6 C47.5,13.5 45.8,11.9 43.7,11.9 L35.5,11.9 C35.4,8.9 34.8,5.5 32.9,3.1 C31.2,1.1 28.9,-2.22044605e-15 25.9,-2.22044605e-15 C23.4,-2.22044605e-15 21.3,1 19.8,2.8 C17.7,5.2 16.9,8.9 16.7,11.9 L8.9,11.9 C6.8,11.9 5.1,13.5 5.1,15.6 L0,56.1 C0,58.2 1.7,59.9 3.8,59.9 L26.9,59.9 L48.8,59.9 C50.9,59.9 52.6,58.2 52.6,56.1 L47.5,15.6 L47.5,15.6 Z M21.2,4 C22.4,2.7 23.9,2 25.8,2 C28.2,2 30,2.9 31.3,4.4 C32.9,6.4 33.4,8.8 33.5,11.8 L18.6,11.8 C18.8,8.9 19.5,6 21.2,4 L21.2,4 Z M48.8,57.9 L26.9,57.9 L3.8,57.9 C2.8,57.9 2.1,57.1 2,56.2 L7.2,15.8 L7.3,15.7 L7.3,15.6 C7.3,14.6 7.9,14 8.9,14 L16.5,14 C16.5,16 16.7,17.3 16.7,17.4 C16.8,17.9 17.2,18.2 17.7,18.2 L17.8,18.2 C18.3,18.1 18.7,17.8 18.7,17.2 C18.7,17.2 18.5,16 18.6,14 L33.6,14 C33.5,16 33.3,17.1 33.3,17.1 C33.2,17.6 33.5,18.1 34.1,18.2 C34.6,18.3 35.2,18.1 35.3,17.5 C35.3,17.4 35.6,16 35.7,14 L43.9,14 C44.9,14 45.5,14.5 45.5,15.6 L45.5,15.7 L45.6,15.8 L50.7,56.2 C50.5,57.1 49.8,57.9 48.8,57.9 L48.8,57.9 Z"></path></g></svg><div class="text">Browse our menu and start adding items to your order</div></div>
+        </div>
+          <div class="items_container"  *ngIf="shoppingCart.length!=0">
+          <a *ngFor="let cart of shoppingCart;let i =index;" class="item without_options last_item" role="button" ngClass="{{a_tag_cls}}" (mousemove)="addClass($event)" (mouseout)="a_tag_cls=''">
+            <a href="#"></a>
+            <div class="col1"><div class="title">{{cart.quantity}} × {{cart.name}}</div></div>
+            <div class="col2"><div class="price">${{cart.quantity*cart.price}}</div></div>
+            <div style="clear: both;"></div>
+            <div class="options"></div>
+            <div class="hovertoolbox ">
+              <button class="button button_duplicate" (click)="addItem(i)">
+                <svg width="10" height="10">
+                  <line x1="0" y1="5" x2="10" y2="5" style="stroke: currentcolor; stroke-width: 2;"></line>
+                  <line x1="5" y1="0" x2="5" y2="10" style="stroke: currentcolor; stroke-width: 2;"></line>
+                </svg>
+              </button>
+              <button class="button button_delete" (click)="deleteItem(i)">
+                <svg width="8" height="8" style="shape-rendering: crispedges;">
+                  <path d="M0 0 L8 8 M8 0 L0 8 M1 0 L8 7 M7 0 L0 7 M0 1 L7 8 M8 1 L1 8 " style="stroke-width: 1px;">
+
+                  </path>
+                </svg>
+              </button>
+            </div></a>
         </div>
         </div>
         <div class="itemsarea_bottomborder"></div>
@@ -90,7 +113,7 @@
           <div class="subtotal line">
             <div class="title">Subtotal</div>
             <div class="min"></div>
-            <div class="amount">$0</div>
+            <div class="amount">${{getCartTotal()}}</div>
             <div style="clear: both;"></div>
           </div>
         </div>
